# ai-route

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  FAQ.md  GTM-PLAN.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  ai-route.py  classifier_prompt.txt  config.example.yaml  install.sh  pyproject.toml  requirements-dev.txt  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ai_route/: __init__.py  __main__.py  classifier_prompt.txt  cli.py  router.py
demo/: record-demo.sh
tests/: __init__.py  test_cli.py  test_router.py
